dockers ok render API ok

--- a/dataScience/cleaning.ipynb
+++ b/dataScience/cleaning.ipynb
@@ -361,7 +361,7 @@
     "\"Utilities\",\"23\":\"Construction\",\"31\":\"Manufacturing\",\"32\":\"Manufacturing\",\"33\":\"Manufacturing\",\"42\":\"Wholesale trade\",\"44\":\"Retail trade\",\"45\":\"Retail trade\",\"48\":\" Transportation and warehousing\", \"49\":\"Transportation and warehousing\", \"51\":\"Information\",\"52\":\"Finance and insurance\", \"53\":\"Real estate and rental and leasing\",\"54\":\"Professional, scientific, and technical services\",\"55\":\"Management of companies and enterprises\",\"56\":\"Administrative and support and waste management and remediation services\",\"61\":\"Educational services\",\"62\":\"Health care and social assistance\",\"71\":\"Arts, entertainment, and recreation\",\"81\":\"Other services (except public administration)\", \"92\": \"Public administration\",\"0\":\"Other\"}\n",
     "\n",
     "NAICS_list = [(key,value) for key,value in NAICS_names.items()]\n",
-    "fichier = open('../Files/NAICS_list.pkl', 'wb')\n",
+    "fichier = open('../django/NAICS_list.pkl', 'wb')\n",
     "pkl.dump(NAICS_list, fichier)\n",
     "fichier.close()\n",
     "\n",
@@ -1502,7 +1502,7 @@
    "outputs": [],
    "source": [
     "state_list = [(gdf.id[i],gdf.name[i]) for i in range(gdf.shape[0])]\n",
-    "fichier = open('../Files/state_list.pkl', 'wb')\n",
+    "fichier = open('../django/state_list.pkl', 'wb')\n",
     "pkl.dump(state_list, fichier)\n",
     "fichier.close()"
    ]
