--- a/dataScience/modelisation.ipynb
+++ b/dataScience/modelisation.ipynb
@@ -536,7 +536,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../Files/xgbModel.pkl', 'wb') as file:\n",
+    "with open('../API/xgbModel.pkl', 'wb') as file:\n",
     "  pickle.dump(xgb, file)\n"
    ]
   },
